Fix the size of the floating collapse button in the diff viewer.
The floating collapse button, when in position: fixed mode, was
appearing as wide as the remainder of the diff viewer. This was due to
not specifying any width, which the old one did (as it was an <img/>
tag). We now specify that width/height appropriately.

--- a/reviewboard/static/rb/css/diffviewer.less
+++ b/reviewboard/static/rb/css/diffviewer.less
@@ -219,6 +219,8 @@
         }
 
         .diff-collapse-btn {
+          @image-size: 14px;
+
           background: #E4D9CB;
           border: 1px black solid;
           padding: 5px;
@@ -227,6 +229,8 @@
           right: -8px;
           z-index: @z-index-diff-collapse-btn;
           opacity: 0.8;
+          width: @image-size;
+          height: @image-size;
 
           &:hover {
             opacity: 1.0;
